<?xml version="1.0" encoding="utf-8"?>
<com.go.rider.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.ReportDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dialog_Bg"
        android:paddingTop="@dimen/padding_XX_Large"
        android:paddingStart="@dimen/padding_X_Large"
        android:paddingEnd="@dimen/padding_X_Large"
        android:paddingBottom="@dimen/padding_X_Large"
        android:gravity="center"
        tools:ignore="DisableBaselineAlignment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_XX_Large"
            tools:text="@string/whyReporting"
            android:textSize="@dimen/text_Size_X_Large"
            android:textColor="@color/font_Color_Dark"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notes_Input_Etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_96sdp"
            android:maxHeight="@dimen/_144sdp"
            android:background="@drawable/shape_input_field"
            android:layout_marginBottom="@dimen/margin_XX_Large"
            android:padding="@dimen/padding_Medium"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Dark"
            android:textColorHint="@color/font_Color_LightGray"
            android:hint="@string/tellUsMore"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_enable"
            android:text="@string/submit"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Light"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.go.rider.wiget.ArcView>