<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationView"
    android:layout_width="@dimen/nav_Size"
    android:layout_height="match_parent"
    android:background="@color/nav_Bg"
    android:layout_gravity="start"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Ripple View-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_minus48sdp"
            android:layout_marginTop="@dimen/_minus48sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/shape_ripple"
                android:layout_marginStart="@dimen/_minus48sdp"
                android:layout_marginTop="@dimen/_minus48sdp"
                android:scaleType="centerCrop"/>

        </FrameLayout>

        <!--Profile Information-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/profileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XX_Large"
            android:paddingTop="@dimen/padding_XX_Large"
            android:layout_marginBottom="@dimen/padding_XX_Large"
            android:paddingStart="@dimen/padding_X_Large"
            android:paddingEnd="@dimen/padding_Default"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true">

            <!--Profile Photo-->
            <com.go.rider.wiget.CircleImageView
                android:id="@+id/profilePhoto"
                android:layout_width="@dimen/icon_Size_XXXX_Large"
                android:layout_height="@dimen/icon_Size_XXXX_Large"
                android:background="@drawable/shape_round"
                android:backgroundTint="@color/colorTrans"
                android:padding="@dimen/padding_X_Small"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar_male"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Username-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_Large"
                    android:layout_marginBottom="@dimen/margin_X_Small"
                    android:textColor="@color/font_Color_Dark"
                    android:textSize="@dimen/text_Size_Medium"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Rihan S. R." />

                <!--Contact Number-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_Large"
                    android:layout_marginTop="@dimen/margin_X_Small"
                    android:textColor="@color/font_Color_Dark"
                    android:textSize="@dimen/text_Size_XX_Small"
                    android:textAllCaps="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="+8801856890365" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Nav Items-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@+id/profileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_Default"
            android:orientation="vertical">

            <!--Nav Item Profile-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navProfile"
                style="@style/NavItemStyle"
                android:drawableStart="@drawable/ic_nav_profile"
                android:text="@string/profile" />

            <!--Nav Item Trips-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navTrips"
                style="@style/NavItemStyle"
                android:drawableStart="@drawable/ic_nav_trips"
                android:text="@string/yourTrips" />

            <!--Nav Item Notification-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navNotification"
                style="@style/NavItemStyle"
                android:drawableStart="@drawable/ic_nav_notification"
                android:text="@string/notification" />

            <!--Nav Item Settings-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navSettings"
                style="@style/NavItemStyle"
                android:drawableStart="@drawable/ic_nav_settings"
                android:text="@string/settings" />

            <!--Nav Item About-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/navAbout"
                style="@style/NavItemStyle"
                android:drawableStart="@drawable/ic_nav_about"
                android:text="@string/about" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</com.google.android.material.navigation.NavigationView>