<?xml version="1.0" encoding="utf-8"?>
<com.go.rider.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.RatingFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dialog_Bg"
        android:paddingTop="@dimen/padding_XX_Large"
        android:paddingStart="@dimen/padding_X_Large"
        android:paddingEnd="@dimen/padding_X_Large"
        android:paddingBottom="@dimen/padding_X_Large"
        android:gravity="center"
        tools:ignore="DisableBaselineAlignment">

        <com.go.rider.wiget.CircleImageView
            android:id="@+id/driverPhoto"
            android:layout_width="@dimen/icon_Size_XXX_Large"
            android:layout_height="@dimen/icon_Size_XXX_Large"
            android:layout_marginBottom="@dimen/margin_X_Large"
            android:scaleType="centerCrop"
            android:background="@drawable/shape_round"
            android:backgroundTint="@color/colorSmokeWhite"
            android:src="@drawable/ic_avatar_male"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_X_Large"
            tools:text="@string/howWasRide"
            android:textSize="@dimen/text_Size_Medium"
            android:textColor="@color/font_Color_Dark"/>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_X_Large"
            android:progressTint="@color/font_Color_Green"
            android:rating="0"
            android:max="5"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notes_Input_Etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_48sdp"
            android:maxHeight="@dimen/_96sdp"
            android:background="@drawable/shape_input_field"
            android:layout_marginBottom="@dimen/margin_XX_Large"
            android:padding="@dimen/padding_Medium"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Dark"
            android:textColorHint="@color/font_Color_LightGray"
            android:hint="@string/note_Hint"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ratingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_enable"
            android:text="@string/rateDriver"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Light"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.go.rider.wiget.ArcView>